<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anhnen"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/TenGame"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/carot"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_button"
        android:text="@string/Batdauhoc" />

    <Button
        android:id="@+id/btnnhandang"
       android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/Caidat" />

    <Button
        android:id="@+id/tapvietchu"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/tapviet" />

    <Button
        android:id="@+id/trochoi"
       android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/trochoi" />

    <Button
        android:id="@+id/btnExit"
       android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/Thoat" />

</LinearLayout>