<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trochoi"
    android:orientation="vertical" >

    <Button
        android:id="@+id/timchucai"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="190dp"
        android:background="@drawable/custom_button"
        android:text="@string/timchucai" />

    <Button
        android:id="@+id/chonanhghepchu"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/ghepchu" />
    <Button
        android:id="@+id/tritue"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/tritue" />

    <Button
        android:id="@+id/quaylai"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/trolai" />

</LinearLayout>