<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/kk"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chonanhphuhop"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"/>

    <GridView
       android:id="@+id/myGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.72"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:padding="10dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" >

    </GridView>
    <Button
        android:id="@+id/back"
        android:layout_marginTop="5dp"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:text="@string/trolai" />

    <Button
        android:id="@+id/ketiep"
        android:layout_marginTop="5dp"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:text="@string/cautiep" />

</LinearLayout>